Fix bg bugs at dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--light-color);
+    background-color: var(--dark-color);
     display: flex;
     justify-content: center;
     align-items: center;
